--- a/media.html
+++ b/media.html
@@ -4,31 +4,13 @@
     <title>&infin;PW Software&infin; Making the 'Net a better place to be!</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/1.css" type="text/css" media="screen,projection" />
-    <script>
-      var _gauges = _gauges || [];
-
-      (function () {
-        if (document.location.hostname != "localhost") {
-          var t = document.createElement("script");
-
-          t.type = "text/javascript";
-          t.async = true;
-          t.id = "gauges-tracker";
-          t.setAttribute("data-site-id", "4fe7b807f5a1f5177d0000a8");
-          t.src = "//secure.gaug.es/track.js";
-
-          var s = document.getElementsByTagName("script")[0];
-          s.parentNode.insertBefore(t, s);
-        }
-      })();
-    </script>
   </head>
   <body>
     <div id="wrapper">
       <div id="innerwrapper">
         <div id="header">
 
-          <h1><a href="/2006">&infin;PW Software&infin;</a></h1>
+          <h1><a href="#">&infin;PW Software&infin;</a></h1>
           <h2>
             Chillingui Headquarters!
           </h2>
@@ -54,7 +36,7 @@
           <h3>First NetNavi?</h3>
           <p class="news">
             well, this will be a huge and ambitious undertaking, but i don't think it's impossible...after all, how hard could it be to make an emotion simulation program, right?
-            <img src="netnavi project/G_Mind-head.jpg">
+            <img src="http://pw-software.5u.com/netnavi project/G_Mind-head.jpg">
             this is a mugshot of my fan NetNavi, Guincool Mind.EXE, and his logo. right now i am trying to figure out the rest of the body...
           </p>
           <h3>PET OS</h3>
@@ -65,21 +47,13 @@
           <ul class="subnav">
             <li>
               <div align=center>
-                <a href="http://www.megaman-newhorizon.com/">
-                  <!--/ dead link
-                  <img src="http://www.megaman-newhorizon.com/nh_aff.png">
-                  /-->
-                </a></div></li>
+                <a href="http://www.megaman-newhorizon.com/"><img src="http://www.megaman-newhorizon.com/nh_aff.png"></a></div></li>
             <li>
               <div align=center>
-                <a href="http://xbuster.planetquake.gamespy.com//"><img src="images/x-buster.jpg"></a></div></li>
+                <a href="http://xbuster.planetquake.gamespy.com//"><img src="http://www.pw-software.5u.com/images/x-buster.jpg"></a></div></li>
             <li>
               <div align=center>
-                <a href="http://www.play-asia.com/SOap-23-83-3q7w-71-8s-49-en-84-k-40-extended.html">
-                  <!--/ dead link
-                  <img src="http://banner.play-asia.com/paOS-1e-74-3z-49-en.gif">
-                  /-->
-                </a></div></li>
+                <a href="http://www.play-asia.com/SOap-23-83-3q7w-71-8s-49-en-84-k-40-extended.html"><img src="http://banner.play-asia.com/paOS-1e-74-3z-49-en.gif"></a></div></li>
           </ul>
           <br>
           <div align=center>
@@ -87,7 +61,7 @@
           </div>
           <br>
           <div align=center>
-            <img src="images/pwsoftware-banner.png">
+            <img src="http://www.files.bz/files/3126/pwsoftware-banner.png">
           </div>
           <h2>Search</h2>
           <input name="" type="text" value="Search" />
@@ -102,12 +76,8 @@
           </p>
           <h2>NDS Web Development Links</h2>
           <ul>
-            <a href="http://my.opera.com/dj_superwibby/affiliate/"><img src="images/88x31opera9black.gif" width="88" height="31" alt="Web browser"/></a>
-            <a href="http://www.programmersheaven.com">
-              <!--/ dead link
-              <img src="http://www.programmersheaven.com/images/ph.gif" >
-              /-->
-            </a>
+            <a href="http://my.opera.com/dj_superwibby/affiliate/"><img src="http://promote.opera.com/buttons/official/88x31/gif/88x31opera9black.gif" width="88" height="31" alt="Web browser" /></a>
+            <a href="http://www.programmersheaven.com"><img src="http://www.programmersheaven.com/images/ph.gif" ></a>
           </ul>
         </div>
         <div id="content">
@@ -120,7 +90,7 @@
             who doesn't like videos? on of the best forms of entertainment and also a very good way to see things in action, my videos will showcase things like the PET beta OS in operation and Guincool Mind controlling programs by himself. excited already?
           </p>
           <p>
-          </p>
+          </p>	
           <h2 id="music"><a href="#">Music</a></h2>
           <p>
             here will be music obviously...perhaps even more obvious is the fact that they will most likely be anime :D hmm...i should add some smilies to my site...just me thinking aloud.
@@ -134,10 +104,6 @@
         </div>
       </div>
     </div>
-    <center><a href="http://www.junkmailstopper.com/">
-      <!--/ dead link
-      <img border="0" src="http://www.buildermaker.com/pw-software5u/-v88-stop_telemarketers.jpg"  alt="stop telemarketers">
-      /-->
-    </a></center>
+    <center><a href="http://www.junkmailstopper.com/"><img border="0" src="http://www.buildermaker.com/pw-software5u/-v88-stop_telemarketers.jpg"  alt="stop telemarketers"></a></center>
   </body>
 </html>
